--- a/Bio.html
+++ b/Bio.html
@@ -60,7 +60,7 @@ img {border:2px solid #000000;}
   </nav>
     </p> 
 
-        <h1 style="color:pink;background-color:gray;font-size:60px;text-align:center;">My Bio</h1>
+        <h1 style="color:pink;background-color:gray;font-size:60px;text-align:center;">Bio</h1>
       </div> 
 
 
